--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Namaste Jamshedpur</title>
+    <title>Namaste Hyderabad</title>
 </head>
 <body>
     
